--- a/styling.css
+++ b/styling.css
@@ -26,8 +26,8 @@ body
     background-color: rgb(187, 85, 190);
     border-radius: 20px;
     width: 100vw;
-    max-width: 500px;
-    height: 350px;
+    max-width: 600px;
+    height: 380px;
     box-shadow: rgb(97, 6, 74) 0 0 40px;
     border-top: 3px solid rgb(240, 204, 231);
     border-left: 3px solid rgb(240, 204, 231);
@@ -57,7 +57,7 @@ body
 {
     color: white;
     width: 90%;
-    font-size: 20px;
+    font-size: 21px;
     line-height: 20px;
     word-wrap: break-word;
     text-align: center;
@@ -67,6 +67,7 @@ body
 {
     font-style: italic;
     color: rgb(242, 196, 245);
+    line-height: 15px;
 }
 #next
 {
