--- a/styling.css
+++ b/styling.css
@@ -26,8 +26,8 @@ body
     background-color: rgb(187, 85, 190);
     border-radius: 20px;
     width: 100vw;
-    max-width: 600px;
-    height: 380px;
+    max-width: 550px;
+    height: 350px;
     box-shadow: rgb(97, 6, 74) 0 0 40px;
     border-top: 3px solid rgb(240, 204, 231);
     border-left: 3px solid rgb(240, 204, 231);
@@ -48,6 +48,7 @@ body
     width: 100%;
     height: 92%;
     margin-top: 5px;
+    margin-bottom: 40px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -67,7 +68,7 @@ body
 {
     font-style: italic;
     color: rgb(242, 196, 245);
-    line-height: 15px;
+    line-height: 2px;
 }
 #next
 {
