--- a/styling.css
+++ b/styling.css
@@ -106,8 +106,8 @@ body
 }
 @media (max-width: 400px)
 {
-    #quote
+    .quote
     {
-        font-size: 18px;
+        font-size: 17px;
     }
 }
