--- a/styling.css
+++ b/styling.css
@@ -12,17 +12,18 @@
 }
 body
 {
-    height:100vh;
+    height: 100vh;
     width: 100vw;
     margin: 0px;
-    padding:0px;
+    padding: 0px;
     background-image: linear-gradient(to right ,rgb(108, 15, 136), rgb(182, 3, 137));
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
 #lamp
 {
+    margin-top: 50px;
     height: 150px;
 }
 #main
