--- a/styling.css
+++ b/styling.css
@@ -8,7 +8,7 @@
   position: absolute;
   top: 4px;
   right: 7px;
-  color: rgb(98, 15, 102);
+  color: rgb(56, 3, 99);
 }
 body
 {
@@ -16,7 +16,7 @@ body
     width: 100vw;
     margin: 0px;
     padding: 0px;
-    background-image: linear-gradient(to right ,rgb(108, 15, 136), rgb(182, 3, 137));
+    background-image: linear-gradient(to right , rgb(53, 7, 126) , rgb(99, 20, 79));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,14 +28,14 @@ body
 }
 #main
 {
-    background-color: rgb(187, 85, 190);
+    background-color: rgb(128, 55, 212);
     border-radius: 20px;
     width: 100vw;
     max-width: 550px;
     height: 350px;
-    box-shadow: rgb(97, 6, 74) 0 0 40px;
-    border-top: 3px solid rgb(240, 204, 231);
-    border-left: 3px solid rgb(240, 204, 231);
+    box-shadow: rgb(18, 6, 27) 15px 15px 40px;
+    border-top: 3px solid white;
+    border-left: 3px solid white;
     position: relative;
     overflow: hidden;
 }
@@ -45,7 +45,7 @@ body
 }
 #listen:hover
 {
-    color: rgb(233, 148, 236); 
+    color: rgb(213, 235, 248); 
     cursor: pointer;
 }
 #quote-space
@@ -71,7 +71,7 @@ body
 #author
 {
     font-style: italic;
-    color: rgb(242, 196, 245);
+    color: rgb(215, 213, 248);
     line-height: 10px;
 }
 #next
@@ -81,13 +81,13 @@ body
     left: 0px;
     width: 49.8%;
     height:45px;
-    background-color: rgb(207, 107, 211);
-    box-shadow: rgb(163, 69, 167) 0 0 40px;
+    background-color: rgb(146, 73, 241);
+    box-shadow: rgb(109, 51, 175) 0 0 40px;
     border: none;
     text-align: center;
     font-size: 17px;
     font-weight: 550;
-    color: rgb(91, 11, 95);
+    color: rgb(56, 3, 99);
 }
 #copy
 {
@@ -96,17 +96,17 @@ body
     right: 0px;
     width: 49.8%;
     height:45px;
-    background-color: rgb(207, 107, 211);
-    box-shadow: rgb(163, 69, 167) 0 0 40px;
+    background-color: rgb(146, 73, 241);
+    box-shadow: rgb(109, 51, 175) 0 0 40px;
     border: none;
     text-align: center;
     font-size: 17px;
     font-weight: 550;
-    color: rgb(91, 11, 95);
+    color: rgb(56, 3, 99);
 }
 #next:hover , #copy:hover
 {
-    background-color: rgb(233, 148, 236);
+    background-color: rgb(159, 127, 247);
     cursor: pointer;
 }
 @media (max-width: 400px)
