--- a/styling.css
+++ b/styling.css
@@ -16,27 +16,22 @@ body
     width: 100vw;
     margin: 0px;
     padding: 0px;
-    background-image: linear-gradient(to right , rgb(34, 3, 83) , rgb(106, 89, 204));
+    background-image: linear-gradient(to right , rgb(21, 3, 49) , rgb(106, 89, 204));
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
-#lamp
-{
-    margin-top: 50px;
-    height: 150px;
-}
 #main
 {
-    background-color: rgb(175, 187, 255);
+    background-color: rgb(102, 116, 192);
     border-radius: 20px;
-    width: 100vw;
+    width: 99vw;
     max-width: 550px;
     height: 350px;
     box-shadow: rgb(18, 6, 27) 15px 15px 60px;
-    border-top: 3px solid white;
-    border-left: 3px solid white;
+    border-top: 3px solid rgb(255, 255, 255);
+    border-left: 3px solid rgb(255, 255, 255);
     position: relative;
     overflow: hidden;
 }
@@ -46,15 +41,14 @@ body
 }
 #listen:hover
 {
-    color: rgb(106, 89, 204); 
+    font-size: 45px;
+    color: aliceblue;
     cursor: pointer;
 }
 #quote-space
 {
     width: 100%;
-    height: 92%;
-    margin-top: 5px;
-    margin-bottom: 40px;
+    height: 87%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -62,7 +56,7 @@ body
 }
 .quote
 {
-    color: rgb(0, 0, 0);
+    color: rgb(253, 250, 250);
     width: 90%;
     font-size: 21px;
     word-wrap: break-word;
@@ -72,7 +66,6 @@ body
 #author
 {
     font-style: italic;
-    color: rgb(40, 36, 116);
     font-size: 19px;
     line-height: 10px;
 }
@@ -83,13 +76,14 @@ body
     left: 0px;
     width: 49.8%;
     height:45px;
-    background-color: rgb(187, 199, 233);
-    box-shadow: rgb(125, 143, 243) 0 0 40px;
+    background-color: rgb(163, 175, 243);
+    box-shadow: rgb(83, 94, 163) 0 0 40px;
     border: none;
     text-align: center;
     font-size: 17px;
     font-weight: 550;
     color: rgb(56, 3, 99);
+    z-index: 2;
 }
 #copy
 {
@@ -98,8 +92,8 @@ body
     right: 0px;
     width: 49.8%;
     height:45px;
-    background-color: rgb(187, 199, 233);
-    box-shadow:  rgb(125, 143, 243) 0 0 40px;
+    background-color: rgb(163, 175, 243);
+    box-shadow: rgb(83, 94, 163) 0 0 40px;
     border: none;
     text-align: center;
     font-size: 17px;
@@ -108,8 +102,9 @@ body
 }
 #next:hover , #copy:hover
 {
-    background-color: rgb(214, 222, 245);
+    background-color: rgb(208, 219, 247);
     cursor: pointer;
+    z-index: 5;
 }
 @media (max-width: 400px)
 {
