--- a/styling.css
+++ b/styling.css
@@ -29,7 +29,7 @@ body
     width: 99vw;
     max-width: 550px;
     height: 350px;
-    box-shadow: rgb(18, 6, 27) 15px 15px 60px;
+    box-shadow: rgb(21, 10, 61) 15px 15px 60px;
     border-top: 3px solid rgb(255, 255, 255);
     border-left: 3px solid rgb(255, 255, 255);
     position: relative;
@@ -66,6 +66,7 @@ body
 #author
 {
     font-style: italic;
+    color: rgb(200, 210, 250);
     font-size: 19px;
     line-height: 10px;
 }
@@ -81,7 +82,6 @@ body
     border: none;
     text-align: center;
     font-size: 17px;
-    font-weight: 550;
     color: rgb(56, 3, 99);
     z-index: 2;
 }
@@ -97,7 +97,6 @@ body
     border: none;
     text-align: center;
     font-size: 17px;
-    font-weight: 550;
     color: rgb(56, 3, 99);
 }
 #next:hover , #copy:hover
